# gitbucket-cli-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  RELEASE.md  REVIEW_NOTES.md  SPEC.md  TESTING.md  TEST_AUTOMATION_PLAN.md  VALIDATION_CHECKLIST.md
.github/agents/: plan-implementer.agent.md  rust-code-reviewer.agent.md
.github/workflows/: e2e.yml  release.yml  rust.yml
docker/e2e/: compose.yaml  nginx.conf
scripts/: release-tag.sh
scripts/e2e/: bootstrap.sh  common.sh  down.sh
skills/gitbucket-cli/: SKILL.md
skills/gitbucket-cli/agents/: openai.yaml
skills/gitbucket-cli/references/: command-patterns.md
src/: error.rs  main.rs
src/api/: client.rs  issue.rs  label.rs  milestone.rs  mod.rs  pull_request.rs  repository.rs  url.rs  user.rs  web.rs
src/cli/: api.rs  auth.rs  auth_status.rs  common.rs  completion.rs  config.rs  config_output.rs  issue.rs  issue_like.rs  label.rs  milestone.rs  mod.rs  pr.rs  repo.rs
src/cli/common/: auth.rs  context.rs  edit_values.rs  mod.rs  repo_resolution.rs  web.rs
src/cli/issue/: mod.rs  read.rs  write.rs
src/cli/issue/write/: comment.rs  create.rs  edit.rs  lifecycle.rs  mod.rs
src/cli/milestone/: due_date.rs  mod.rs  read.rs  write.rs
src/cli/milestone/write/: create.rs  delete.rs  edit.rs  mod.rs
src/cli/pr/: git.rs  mod.rs  read.rs  worktree.rs  write.rs
src/cli/pr/write/: comment.rs  create.rs  edit.rs  existing.rs  mod.rs  (+1 more)
src/cli/repo/: git.rs  mod.rs  read.rs  write.rs
src/config/: auth.rs  mod.rs
src/config/auth/: mod.rs  model.rs  resolve.rs  store.rs  tests.rs
src/models/: comment.rs  issue.rs  label.rs  milestone.rs  pull_request.rs  repository.rs  user.rs
src/output/: mod.rs  table.rs
tests/: api_auth_repo_flows.rs  api_command.rs  api_issue_pr_flows.rs  completion_command.rs  config_command.rs  config_resolution.rs  e2e_smoke.rs  git_regressions.rs  issue_command.rs  issue_create_state_comment_flows.rs  issue_edit_flows.rs  label_command.rs  milestone_command.rs  mocked_api_flows.rs  pr_command.rs  pr_create_flows.rs  pr_edit_flows.rs  pr_list_state_comment_flows.rs  regression_pre_fix.rs  state_requests.rs  view_flows.rs
tests/e2e_smoke/: auth_config.rs  issue.rs  pr.rs  repo_label_milestone.rs  support.rs
tests/git_regressions/: auth_logout.rs  common.rs  pr_create.rs  pr_diff.rs  pr_remote.rs  repo_and_api.rs
tests/support/: gb_cmd.rs  git_repo.rs  mock_http.rs  mod.rs
