[package]
name = "gb"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for GitBucket, inspired by GitHub CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
anyhow = "1"
colored = "3"
dialoguer = "0.11"
toml = "0.8"
open = "5"
url = "2"
