[package]
name = "gitbucket-cli"
version = "0.6.0"
edition = "2021"
description = "A command-line tool for GitBucket, inspired by GitHub CLI"
license = "MIT"
repository = "https://github.com/Masahiro-Obuchi/gitbucket-cli-rs"
readme = "README.md"
keywords = ["gitbucket", "cli", "git"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".codex", ".codex/**"]

[[bin]]
name = "gb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", features = [
  "cookies",
  "json",
  "rustls-tls-native-roots",
], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
colored = "3"
dialoguer = "0.11"
toml = "0.8"
open = "5"
url = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
